<resources>
    <string name="app_name">UniShare</string>
    <string name="bacheche">Bacheche</string>
    <string name="subtitle_bacheca">Scegli la meta giusta per te!</string>
    <string name="create_bacheca">Crea bacheca</string>
    <string name="confirm">Conferma</string>
    <string name="share">Pubblica</string>
    <string name="insert_commento">Inserisci commento</string>
    <string name="title">Titolo</string>
    <string name="description">Descrizione</string>
    <string name="author">Autore</string>
    <string name="post">Post</string>
    <string name="comments">Commenti</string>
    <string name="profile">Profilo</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="email">Email</string>
    <string name="sex">Sesso</string>
    <string name="birth">Data di nascita</string>
    <string name="modify_profile">Modifica profilo</string>
    <string name="delete_profile">Cancella profilo</string>
    <string name="already_signed">Già registrato?</string>
    <string name="register">Registrati</string>
    <string name="register_to_unishare">Registrati a UniShare</string>
    <string name="insert_name">Inserisci nome</string>
    <string name="insert_surname">Inserisci cognome</string>
    <string name="insert_email">Inserisci email</string>
    <string name="insert_pass">Inserisci password</string>
    <string name="confirm_pass">Conferma password</string>
    <string name="insert_sex">Inserisci sesso</string>
    <string name="male">Maschio</string>
    <string name="female">Femmina</string>
    <string name="privacy">Condizioni sulla privacy</string>
    <string name="accept_privacy">Accetto i termini e le condizioni</string>
    <string name="login">Login</string>
    <string name="search_post">Cerca fra i post...</string>
    <string name="search_comment">Cerca fra i commenti...</string>
    <string name="search_user">Cerca fra gli utenti...</string>
    <string name="share_post">Aggiungi post</string>
    <string name="modify_comment">Modifica commento</string>
    <string name="modify">Modifica</string>
    <string name="delete">Cancella</string>
    <string name="modify_pass">Modifica password</string>
    <string name="modify_email">Modifica email</string>
    <string name="modify_name">Modifica nome</string>
    <string name="modify_surname">Modifica cognome</string>
    <string name="logout">Logout</string>
    <string name="search_user_item">Cerca utenti</string>
    <string name="manager_panel">Pannello manager</string>
    <string name="share_post_2">Pubblica post</string>
    <string name="modify_bacheca">Modifica bacheca</string>
    <string name="modify_post">Modifica post</string>
    <string name="welcome">Benvenuto su UniShare!</string>
    <string name="gigione">gigione cancella</string>
</resources>