<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/loginMenu"
        android:title="@string/login"
        ></item>
    <item
        android:title="@string/logout"
        android:id="@+id/logoutMenu">
    </item>
    <item
        android:title="@string/register"
        android:id="@+id/registrazioneMenu">
    </item>
    <item
        android:id="@+id/cercaMenu"
        android:title="@string/search_user_item"></item>
    <item
        android:title="@string/profile"
        android:id="@+id/profiloMenu"

        >
    </item>
    <item
        android:title="@string/manager_panel"
        android:id="@+id/managerMenu">
    </item>
</menu>