<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitolo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title" />

    <TextView
        android:id="@+id/textViewDescrizione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description" />

    <TextView
        android:id="@+id/textViewAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author" />


    <Button
        android:id="@+id/addPost"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="30sp"

        android:layout_marginBottom="10sp"
        android:fontFamily="@font/acme"
        android:text="@string/share"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/listViewPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ListView>


</LinearLayout>